@@ -5,6 +5,8 @@ NEXT
         [ENHANCEMENTS]
         Added more exclusions.  Thanks to Olivier Mengué.
 
+        * [RT #24110] Support for Test::CheckManifest + tests for it (Sawyer X)
+
 
 1.52    Mon Jul 27 01:25:03 CDT 2009
         * Support for more licenses.  Thanks to Shlomi Fish.
